# pixeldike

./: .dockerignore  .drone.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  README.md  flake.nix  kustomization.yml  renovate.json  shell.nix  todo.txt
.cargo/: config.toml
.github/workflows/: container.yml  test.yml
.k8s/: deployment.yml  service.yml
.woodpecker/: container_image.yml  test.yml
backend/: Cargo.toml
backend-elixir/: .gitignore  README.md  mix.exs
backend-elixir/apps/pixelflut_canvas/: mix.exs
backend-elixir/apps/pixelflut_canvas/lib/: application.ex  canvas.ex  canvas_client.ex  canvas_server.ex  encoder_client.ex  encoder_server.ex  native_array.ex
backend-elixir/apps/pixelflut_canvas/native/nativearray/: Cargo.toml
backend-elixir/apps/pixelflut_canvas/native/nativearray/src/: lib.rs  lib_new.rs
backend-elixir/apps/pixelflut_canvas/test/: canvas_test.exs  encoder_test.exs  native_array_test.exs
backend-elixir/apps/pixelflut_server/: mix.exs
backend-elixir/apps/pixelflut_server/config/: config.exs
backend-elixir/apps/pixelflut_server/lib/: application.ex  command_handler.ex  pixelflut_server.ex
backend-elixir/apps/pixelflut_server/lib/net/: tcp_server.ex
backend-elixir/apps/pixelflut_server/lib/pixelflut_server/: application.ex
backend-elixir/apps/pixelflut_server/test/: command_handler_test.exs
backend-elixir/config/: config.exs  dev.exs
backend-go/: Dockerfile  go.mod  go.sum  main.go
backend-go/network/: tcpServer.go  tcp_server.go  udpServer.go  udp_server.go  websocketServer.go  websocket_server.go
backend-go/protocol/: color.go  parser.go  pixmap.go  pixmap_file.go
backend-go/util/: lineReader.go
backend-rust/: Cargo.toml
backend/src/: color.rs  main.rs  pixmap.rs
backend/src/network/: mod.rs  patient_writer.rs  protocol.rs  px_server.rs  tcp_server.rs
backend/src/servers/: mod.rs  tcp_server.rs
frontend-python/: Pipfile  get_image.py  live_display.py  pixelflut_client.py  put_image.py  requirements.txt
frontend-python/scripts/: get_image.py  live_display.py  put_image.py
frontend-python/src/: pixelflut_client.py
frontend-rust/: Cargo.toml
frontend-rust/src/: main.rs  pixmap.rs  px_client.rs
integration-tests/: Pipfile  server_test_case.py  test.py
k8s/: deployment.yml  pvc.yml  service.yml
pixelparser/: Cargo.toml  deny.toml
pixelparser/.cargo/: config.toml
pixelparser/benches/: parsing.rs  parts.rs
pixelparser/src/: align.rs  compliant.rs  fast.rs  lib.rs  main.rs  simdimpl.rs
rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  pixmap  test.pixbuf
rust/.cargo/: config.toml
rust/.run/: Run Gui.run.xml  Run Server.run.xml  Test.run.xml
rust/benches/: command_e2e_benchmark.rs  live_server_benchmark.rs  pixmap_benchmark.rs
rust/po/pixelflut/: en.po  pixelflut.pot
rust/scripts/: start_rtmp_server.sh  start_stream_server.sh  ws_test.html
rust/src/: cli.rs  daemon_task.rs  framebuffer_gui.rs  i18n.rs  lib.rs  main.rs  pixmap.rs
rust/src/actor_framework/: mod.rs
rust/src/canvas/: act_local_canvas.rs  mod.rs  msg_get_pixel.rs  msg_get_size.rs  msg_set_pixel.rs
rust/src/gui/: app.rs  config_form.rs  control_buttons.rs  gpu_rendering.rs  gui_management.rs  gui_proxy.rs  gui_thread.rs  layout.rs  mod.rs  rendering.rs  server_worker.rs  shader.rs  shader.wgsl  texture.rs  utils.rs  window_management.rs
rust/src/gui/components/: config_form.rs  control_buttons.rs  layout.rs  mod.rs
rust/src/gui/components/server/: mod.rs  pixmap_display.rs  server_config_form.rs  server_control_buttons.rs  server_holder.rs  server_layout.rs  server_worker.rs
rust/src/net/: buf_msg_reader.rs  fixed_msg_stream.rs  framing.rs  mod.rs  msg_streams.rs  stream.rs  tcp_client.rs  tcp_server.rs  udp_server.rs  ws_server.rs
rust/src/net/clients/: gen_client.rs  mod.rs  tcp_client.rs  udp_client.rs
rust/src/net/framing/: mod.rs  read.rs  write.rs
rust/src/net/protocol/: compliant_parser.rs  dtypes.rs  mod.rs
rust/src/net/protocol/nom_parsers/: color.rs  coordinates.rs  help_topic.rs  mod.rs  request.rs  response.rs  server_config.rs  state_encoding_algo.rs
rust/src/net/servers/: benchmark.rs  gen_server.rs  mod.rs  tcp_server.rs  udp_server.rs  ws_server.rs
rust/src/net_protocol/: dtypes.rs  mod.rs
rust/src/net_protocol/nom_parsers/: color.rs  coordinates.rs  help_topic.rs  request.rs  response.rs  state_encoding_algo.rs
rust/src/parser/: command.rs  mod.rs
rust/src/parser/simple/: command.rs  coordinate.rs  hex_color.rs  mod.rs
rust/src/pixmap/: color.rs  file_backed.rs  file_backed_pixmap.rs  gdk_pixbuf_pixmap.rs  in_memory.rs  in_memory_pixmap.rs  mod.rs  paintable_pixmap.rs  remote_pixmap.rs  replicating_pixmap.rs  storage.rs  traits.rs
rust/src/protocol/: fast_parsers.rs  mod.rs  request.rs  response.rs
rust/src/protocol/nom_parsers/: help_topic.rs  hex_color.rs  request.rs  response.rs
rust/src/protocol/parsers/: combinators.rs  coordinate.rs  encoding_algorithm.rs  help_topic.rs  hex_color.rs  mod.rs  request.rs  response.rs
rust/src/sinks/: ffmpeg.rs  framebuffer.rs  mod.rs  pixmap_file.rs  rtsp_stream.rs  window.rs
rust/src/state_encoding/: encodings.rs  mod.rs  rgb64.rs  rgba64.rs
scripts/: ws_test.html
src/: cli.rs  command_handler.rs  lib.rs  main.rs  main_utils.rs  pixmap.rs  tcp_server.rs  texts.rs  udp_server.rs  websocket_server.rs
src/net/: mod.rs
src/net/clients/: gen_client.rs  mod.rs  tcp_client.rs  udp_client.rs  unix_socket_client.rs
src/net/protocol/: dtypes.rs
src/net/servers/: gen_server.rs  mod.rs  tcp_server.rs  unix_sock_server.rs
src/pixmap/: storage.rs
src/servers/: mod.rs  tcp_server.rs  udp_server.rs  websocket_server.rs
src/sinks/: ffmpeg.rs  framebuffer.rs  pixmap_file.rs
