[package]
name = "pixeldike"
version = "0.1.0"
authors = ["Finn-Thorben Sell <dev@finn-thorben.me>"]
edition = "2021"
description = "pixel drawing game for programmers inspired by reddits r/place"
documentation = "https://docs.rs/pixeldike"
readme = "README.md"
repository = "https://github.com/ftsell/pixeldike.git"
license = "MIT"
keywords = ["pixelflut"]
categories = ["command-line-utilities", "games", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"

[features]
default = ["cli", "tcp", "udp"]
ws = ["dep:tokio-tungstenite", "dep:futures-util"]
tcp = []
udp = []
windowing = ["dep:minifb"]
cli = ["tcp", "dep:clap", "dep:rand", "dep:tracing-subscriber", "dep:image", "dep:ab_glyph"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "pixeldike"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
ab_glyph = { version = "0.2.23", optional = true }
anyhow = "1.0.68"
async-trait = "0.1.73"
bytes = "1.3.0"
clap = { version = "4.0.30", optional = true, features = [ "derive" ] }
framebuffer ="0.3.1"
futures-util = { version = "0.3.25", optional = true }
image = { version = "0.25.0", optional = true }
itertools = "0.12.0"
minifb = { version = "0.27.0", optional = true }
rand = { version = "0.8.5", optional = true }
thiserror = "1.0.38"
tokio = { version = "1.38.0", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.23.0", optional = true }
tracing = { version = "0.1.37", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.17", optional = true }
url = "2.5.0"

[dev-dependencies]
quickcheck = "1.0.3"
tempfile = "3.3.0"
