[package]
name = "pixelparser"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "parts"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"

[unstable]
build-std = ["std", "panic_abort", "core", "alloc"]
build-std-features = ["panic_immediate_abort"]

[dependencies]
atoi_simd = "0.15.6"
minifb = "0.25.0"
tokio = { version = "1.36.0", features = ["full", "time"] }

[dev-dependencies]
criterion = "0.5.1"
criterion-cycles-per-byte = "0.6.0"
