[package]
name = "pixelflut"
version = "0.1.0"
publish = false
authors = ["Finn-Thorben Sell <dev@finn-thorben.me>"]
edition = "2021"
description = "pixel drawing game for programmers inspired by reddits r/place"
documentation = "https://docs.rs/pixelflut"
readme = "README.md"
repository = "https://github.com/ftsell/pixelflut.git"
license = "MIT"
keywords = ["pixelflut"]
categories = ["command-line-utilities", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli", "tcp_server", "udp_server", "tcp_client", "udp_client"]
cli = ["clap", "image", "tracing-subscriber", "embedded-graphics"]
gui = ["winit", "wgpu", "raw-window-handle", "bytemuck"]
framebuffer_gui = [ "framebuffer" ]
tcp_server = []
tcp_client = []
udp_server = []
udp_client = []
ws_server = ["tokio-tungstenite"]


[profile.release]
lto = true

[profile.bench]
debug = true

[lib]
path = "src/lib.rs"
bench = false       # disable default cargo benchmarks because we use criterion

[[bin]]
name = "pixelflut"
path = "src/main.rs"
required-features = ["cli"]
bench = false       # disable default cargo benchmarks because we use criterion

#[[bench]]
#name = "pixmap_benchmark"
#harness = false

[[bench]]
name = "command_e2e_benchmark"
harness = false

[dependencies]
anyhow = "1.0.68"
base64 = "0.21.0"
byteorder = "1.4.3"
bytes = "1.3.0"
futures-util = "0.3.25"
lazy_static = "1.4.0"
tracing = "0.1.37"
nom = "7.1.1"
regex = "1.7.0"
sha1 = "0.10.5"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full", "tracing"] }
async-trait = "0.1.73"

# cli
image = { version = "0.24.7", optional = true }
clap = { version = "4.0.30", optional = true, features = [ "derive" ] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"], optional = true }
embedded-graphics = { version = "0.8.1", optional = true }

# websocket support
tokio-tungstenite = { version = "0.18.0", optional = true }

# gui
winit = { version = "0.27.5", optional = true }
wgpu = { version = "0.15.0", optional = true }
raw-window-handle = { version = "0.5.0", optional = true }
bytemuck = { version = "1.13.1", optional = true, features = ["derive"] }

# framebuffer gui
framebuffer = { version = "0.3.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio", "plotters"] }
quickcheck = "0.9.2"
tempfile = "3.3.0"
rand = "0.8.5"
