[package]
name = "pixelflut"
version = "0.1.0"
publish = false
authors = ["Finn-Thorben Sell <dev@finn-thorben.me>"]
edition = "2021"
description = "pixel drawing game for programmers inspired by reddits r/place"
documentation = "https://docs.rs/pixelflut"
readme = "README.md"
repository = "https://github.com/ftsell/pixelflut.git"
license = "MIT"
keywords = ["pixelflut"]
categories = ["command-line-utilities", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"

[profile.bench]
debug = true

[features]
default = ["cli", "tcp", "udp"]
ws = ["dep:tokio-tungstenite", "dep:futures-util"]
tcp = []
udp = []
windowing = ["dep:minifb"]
cli = ["tcp", "dep:clap", "dep:rand", "dep:tracing-subscriber", "dep:image"]

[lib]
path = "src/lib.rs"
bench = false       # disable default cargo benchmarks because we use criterion

[[bin]]
name = "pixelflut"
path = "src/main.rs"
required-features = ["cli"]
bench = false       # disable default cargo benchmarks because we use criterion

[[bench]]
name = "command_e2e_benchmark"
harness = false

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
thiserror = "1.0.38"
async-trait = "0.1.73"
framebuffer ="0.3.1"
itertools = "0.12.0"
tracing = { version = "0.1.37", features = ["release_max_level_debug"] }
tokio = { version = "1.35.0", features = ["full", "tracing"] }
futures-util = { version = "0.3.25", optional = true }
tokio-tungstenite = { version = "0.21.0", optional = true }
rand = { version = "0.8.5", optional = true }
minifb = { version = "0.25.0", optional = true }
image = { version = "0.24.7", optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }
clap = { version = "4.0.30", optional = true, features = [ "derive" ] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio", "plotters"] }
quickcheck = "1.0.3"
tempfile = "3.3.0"
